--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@
 }
 
 body {
-
+	font-family: 'Varela Round', sans-serif;
+	line-height: 1.6;
+	color: #3a3a3a;
 }
 
 p {
@@ -28,6 +30,11 @@ h3 {
 
 a {
 	text-decoration: none;
+	color: #000;
+}
+
+a:hover {
+	color: aqua;
 }
 
 img {
@@ -45,11 +52,16 @@ nav {
 	/*display: inline-block;*/
 }
 
+/*.main-nav {
+	margin: 0;
+}*/
+
 .main-nav li {
 	text-align: center;
 	background: #FFF;
 	display: block;
-	padding: 10px;
+	/*padding: 10px;*/
+	margin: 5px 5px;
 }
 
 .main-nav a {
@@ -72,10 +84,13 @@ nav {
 
 .topbox {
 	background: lightgrey;
+	margin: 0;
 }
 
 .name {
 	text-align: center;
+	padding: 1px;
+	margin: 0 5px;
 }
 
 .profile {
@@ -83,8 +98,9 @@ nav {
 }
 
 .intro {
-	margin: auto;
+	margin: 0;
 	text-align: center;
+	background: lightgrey;
 }
 
 .blurb {
@@ -96,6 +112,7 @@ nav {
 	border: 2px solid #8292b1;
 	padding: 10px 10px;
 	margin: auto;
+	background: #FFF;
 }
 
 .main-header {
@@ -104,7 +121,24 @@ nav {
 }
 
 .main-footer {
+	margin-top: 1px solid darkgrey;
+	background: lightgrey;
+	margin: auto;
+}
 
+.footname {
+	float: left;
+}
+
+.return {
+	float: right;
+	text-transform: uppercase;
+}
+
+.contactbox {
+	text-align: center;
+	background: lightgrey;
+	padding: 5px;
 }
 
 /* ---- Page Elements ---- */
