Validator Test & Corrections
ran index.html through validator, corrected missing <ul> and </a> tags, declared language in <html> tag, broke font links into separate lines, fixed syntax preventing max width from kicking in after 1024 width, added a max width of 1150

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,6 @@ nav a:hover,
 	text-align: center;
 	padding: 1px;
 	margin: 0 5px;
-	text-decoration: center;
 }
 
 .profile {
@@ -225,7 +224,6 @@ nav a:hover,
   	.topbox {
   		width: 90%;
   		margin: auto;
-  		float: center;
   	}
 
 	.box {
@@ -267,12 +265,6 @@ nav a:hover,
 		/*text-orientation: : center;*/
 	}
 
-	.main-header,
-	.main-footer {
-		/*width: 90%;*/
-		text-orientation: center;
-	}
-
 	.return {
 		display: none;
 	}
@@ -300,8 +292,9 @@ nav a:hover,
 	.main-header,
 	.wrap,
 	.contactbox,
-	.main-footer, {
+	.main-footer {
 		max-width: 1150px;
+		margin: auto;
 	}
 
 	.box {
