--- a/css/style.css
+++ b/css/style.css
@@ -218,12 +218,16 @@ nav a:hover,
   		/*width: 90%;*/
   		margin: 0 auto;
   		clear: both;
-  		padding: 0 10px;
+  		padding: 5px 10px;
   	}
 
   	.topbox {
   		width: 90%;
   		margin: auto;
+  	}
+
+  	.intro {
+  		padding: 20px;
   	}
 
 	.box {
@@ -236,12 +240,15 @@ nav a:hover,
 	.profile {
 		float: right;
 		width: 40%;
+		padding: 10px;
 	}
 
 	.blurb {
 		float: left;
 		width: 60%;
-		padding-top:25px;
+		/*padding: 50px 30px;*/
+		padding-top: 20px;
+		padding-bottom: 20px;
 		padding-right: 25px;
 	}
 
